fix: override specific DaisyUI 'dark mode' settings
Locks values for custom CSS properties '--color-base-content' and 'base-color-100', as well as  'backgound-color' for '.bg-base-100', '.input', and '.modal-box' classes, to keep colors consistent between browsers in 'dark' and 'light' modes.

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1147,3 +1147,29 @@ button:disabled:hover,
   transform: none;
   border-color: var(--palette-borders-separators);
 }
+
+.form-input,
+.form-textarea,
+.form-select {
+  background-color: var(--palette-accent-white) !important;
+  color: var(--palette-primary-text) !important;
+  border-color: var(--palette-borders-separators) !important;
+}
+
+input::placeholder,
+textarea::placeholder {
+  color: var(--palette-secondary-text);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-base-content: oklch(21% 0.006 285.885);
+    --base-color-100: oklch(100% 0 0);
+  }
+
+  .bg-base-100,
+  .input,
+  .modal-box {
+    background-color: var(--palette-accent-white);
+  }
+}
